<resources>
    <string name="app_name">SSUSUAI</string>
    <string name="chat">Чат</string>
    <string name="news">Новости</string>
    <string name="calendar">Календарь</string>
    <string name="gallery">Галерея</string>
    <string name="profile">Профиль</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="dateHint">Дата рождения</string>
    <string name="registr">Зарегестрироваться</string>
    <string name="edit">Редактировать</string>
    <string name="visited">Посещенные мероприятия</string>
    <string name="no_visited_events">Вы пока не посетили ни одного мероприятия :( \n Не пора ли это исправить?</string>
    <string name="today">Сегодня</string>
    <string name="time">Время</string>
    <string name="event">Мероприятие</string>
    <string name="soon">Скоро</string>
    <string name="last">Недавние</string>
    <string name="edit_icon">Изменить</string>
    <string name="photos">Фотографии</string>
    <string name="albums">События</string>
    <string name="go_to_calendar">Перейти в календарь</string>
    <string name="message">Сообщение…</string>

    <string name="about_sno">
        Cтуденческое научное общество — это форма организации научного творчества молодёжи и научно-исследовательской работы студентов, направленная на подготовку научных и инженерных кадров, их вовлечения в разработку конкретных проектов в период обучения.
    </string>
    <string name="about_photo_in_add_new">
    Если вы добавите больше одной фотографии, то автоматически будет создан альбом с фотографиями
    </string>
    <string name="all">All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Заголовок новости</string>
    <string name="body_text">Текст новости</string>
    <string name="add_new">Добавить новость</string>
    <string name="isAdmin">Ты - админ?</string>
    <string name="hint_pin">0000</string>
    <string name="add_photo">Добавить фото</string>
    <string name="total_photo">Выбранно фотографий</string>
    <string name="preview_new">Предпросмотр новости</string>
    <string name="public_chat">Группы</string>
    <string name="enter">Войти</string>
    <string name="no_event">Мероприятий нет</string>
</resources>