<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_standard">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userTextContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="31dp"
        android:hint="@string/name_hint"
        app:layout_constraintTop_toBottomOf="@id/end_top">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="17dp"
        android:hint="@string/surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTextContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_button_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/datePicker"
        android:layout_width="0dp"
        app:icon="@drawable/calendar"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="17dp"
        android:text="@string/dateHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_button_birthday"
        app:layout_constraintTop_toBottomOf="@id/surnameContainer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:textStyle="normal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/datePicker"
        app:layout_constraintEnd_toEndOf="@id/start_button_birthday"
        app:layout_constraintBottom_toBottomOf="@id/datePicker"
        android:textColor="@color/black"
        tools:text="14.04.2003" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registr"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintEnd_toEndOf="@id/center"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>